Исправлена ошибка: незакрытый тег

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 9000" width="220" height="145">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <div>
-              <span>32500 Р.<span>
+              <span>32500 Р.</span>
               <span>25500 Р.</span>
             </div>
             <div>
