Разметка внутренней страницы

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
             </div>
 
             <div>
-              <button type="button"></button>
-              <button type="button"></button>
+              <button type="button"><span>Назад</span></button>
+              <button type="button"><span>Вперед</span></button>
             </div>
 
             <div>
-              <span></span>
-              <span></span>
+              <button type="button"><span>Слайд 1</span></button>
+              <button type="button"><span>Слайд 2</span></button>
             </div>
 
           </div>
