Разметка внутренней страницы (исправление замечаний)

--- a/catalog.html
+++ b/catalog.html
@@ -11,15 +11,14 @@
   <header>
 
     <div>
-      <a href="index.html"><img src="https://via.placeholder.com/138x23" alt="Логотип Техномарт" width="138"
-          height="23"></a>
+      <a href="index.html"><img src="https://via.placeholder.com/138x23" alt="Логотип Техномарт" width="138" height="23"></a>
       <!-- Здесь будет форма поиска -->
 
       <ul>
-        <li><a href="blank.html">Закладки: <span>0</span></a></li>
-        <li><a href="blank.html">Корзина: <span>10</span></a></li>
+        <li><a href="404.html">Закладки: <span>0</span></a></li>
+        <li><a href="404.html">Корзина: <span>10</span></a></li>
       </ul>
-      <a href="blank.html">Оформить заказ</a>
+      <a href="404.html">Оформить заказ</a>
     </div>
 
     <div>
@@ -28,22 +27,21 @@
       <a href="tel:+78125550555">+7 (812) 555-05-55</a>
       <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 
-      <div><a href="blank.html">Равшан Джамшутович</a> <a href="blank.html"><img src="https://via.placeholder.com/20x17"
-            alt="Выход" width="20" height="17"></a></div>
+      <div><a href="404.html">Равшан Джамшутович</a> <a href="404.html"><img src="https://via.placeholder.com/20x17" alt="Выход" width="20" height="17"></a></div>
       <ul>
-        <li><a href="blank.html">Мои заказы</a></li>
-        <li><a href="blank.html">Личный кабинет</a></li>
+        <li><a href="404.html">Мои заказы</a></li>
+        <li><a href="404.html">Личный кабинет</a></li>
       </ul>
 
       <nav>
         <ul>
           <li><a href="index.html">Главная</a></li>
-          <li><a href="blank.html">Компания</a></li>
+          <li><a href="404.html">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="404.html">Новости</a></li>
+          <li><a href="404.html">Спецпредложения</a></li>
+          <li><a href="404.html">Доставка</a></li>
+          <li><a href="404.html">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -54,187 +52,156 @@
 
     <section>
       <ul>
-        <li><a href="index.html"><img src="https://via.placeholder.com/14x12" alt="Главная" width="14" height="12"></a>
-        </li>
+        <li><a href="index.html"><img src="https://via.placeholder.com/14x12" alt="Главная" width="14" height="12"></a></li>
         <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="blank.html">Инструмент</a></li>
+        <li><a href="404.html">Инструмент</a></li>
         <li><a>Перфораторы</a></li>
       </ul>
 
-      <h1>Перфораторы</h1>
+      <h1><span>Каталог товаров:</span> Перфораторы</h1>
 
-      <div>
+      <section>
         <h2>Фильтр:</h2>
         <!-- Здесь будет форма фильтров -->
-      </div>
+      </section>
 
+      <section>
+        <!-- Здесь фразу "Сортировка" оставить в "р" или может сделать тоже h2? -->
+        <p>Сортировка:</p>
+        <div>
+          <a href="catalog.html?sort=price">По цене</a>
+          <a href="catalog.html?sort=type">По типу</a>
+          <a href="catalog.html?sort=function">По функционалу</a>
+        </div>
+        <div>
+          <a href="catalog.html?order=ASC"><span>По возрастанию</span></a>
+          <a href="catalog.html?order=DESC"><span>По убыванию</span></a>
+        </div>
+      </section>
+
+      <section>
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+          <div>
+            <span>30500 Р.</span>
+            <span>25500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"  width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+          <div>
+            <span>30500 Р.</span>
+            <span>25500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+          <div>
+            <span>30500 Р.</span>
+            <span>25500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 3000</h3></a>
+          <div>
+            <span>22500 Р.</span>
+            <span>15500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+          <div>
+            <span>30500 Р.</span>
+            <span>25500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 2000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 2000</h3></a>
+          <div>
+            <span>12500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 3000</h3></a>
+          <div>
+            <span>22500 Р.</span>
+            <span>15500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+          <div>
+            <span>30500 Р.</span>
+            <span>25500 Р.</span>
+          </div>
+        </article>
+
+        <article>
+          <div>
+            <a href="404.html">Купить</a>
+            <a href="404.html">В закладки</a>
+          </div>
+          <a href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 2000" width="220" height="145"></a>
+          <a href="404.html"><h3>Перфоратор BOSCH BFG 2000</h3></a>
+          <div>
+            <span>12500 Р.</span>
+          </div>
+        </article>
+      </section>
+      
+      <!-- Обернул все в секции. Возник вопрос что делать тогда с пагинацией? Впихнуть ее в секцию с каталогом или оставить отдельным дивом? Или тоже в отдельную секцию ее?) -->
       <div>
-        <h2>Каталог товаров</h2>
-
-        <div>
-          <p>Сортировка:</p>
-          <div>
-            <button type="button">По цене</button>
-            <button type="button">По типу</button>
-            <button type="button">По функционалу</button>
-          </div>
-          <div>
-            <button type="button"><span>По возрастанию</span></button>
-            <button type="button"><span>По убыванию</span></button>
-          </div>
-        </div>
-
-        <div>
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-            </a>
-            <div>
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-            </a>
-            <div>
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-            </a>
-            <div>
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-            </a>
-            <div>
-              <span>22500 Р.</span>
-              <span>15500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-            </a>
-            <div>
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 2000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-            </a>
-            <div>
-              <span>12500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-            </a>
-            <div>
-              <span>22500 Р.</span>
-              <span>15500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-            </a>
-            <div>
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-
-          <article>
-            <a href="blank.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 2000"
-                width="220" height="145"></a>
-            <a href="blank.html">
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-            </a>
-            <div>
-              <span>12500 Р.</span>
-            </div>
-            <div>
-              <a href="blank.html">Купить</a>
-              <a href="blank.html">В закладки</a>
-            </div>
-          </article>
-        </div>
-
-        <div>
-          <a href="?page=1">1</a>
-          <a href="?page=2">2</a>
-          <a href="?page=3">3</a>
-          <a href="?page=2">Следующая</a>
-        </div>
-
+        <a href="catalog.html?page=1">1</a>
+        <a href="catalog.html?page=2">2</a>
+        <a href="catalog.html?page=3">3</a>
+        <a href="catalog.html?page=2">Следующая</a>
       </div>
     </section>
 
@@ -253,8 +220,7 @@
 
     <div>
       <div>
-        <a href="index.html"><img src="https://via.placeholder.com/220x68" alt="Логотип «Техномарт» красный" width="220"
-            height="68"></a>
+        <a href="index.html"><img src="https://via.placeholder.com/220x68" alt="Логотип «Техномарт» красный" width="220" height="68"></a>
         <address>
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
         </address>
@@ -262,18 +228,18 @@
 
       <div>
         <ul>
-          <li><a href="blank.html">Компания</a></li>
-          <li><a href="blank.html">Новости</a></li>
+          <li><a href="404.html">Компания</a></li>
+          <li><a href="404.html">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="404.html">Доставка</a></li>
+          <li><a href="404.html">Контакты</a></li>
         </ul>
 
         <ul>
-          <li><a href="blank.html">Материалы</a></li>
-          <li><a href="blank.html">Техника</a></li>
-          <li><a href="blank.html">Инструмент</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="404.html">Материалы</a></li>
+          <li><a href="404.html">Техника</a></li>
+          <li><a href="404.html">Инструмент</a></li>
+          <li><a href="404.html">Спецпредложения</a></li>
         </ul>
       </div>
     </div>
@@ -282,9 +248,9 @@
       <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
 
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="https://vk.com/denistugov" target="_blank">Вконтакте</a></li>
+        <li><a href="https://www.facebook.com/denis.tugov" target="_blank">Фейсбук</a></li>
+        <li><a href="https://www.instagram.com/den0015" target="_blank">Инстаграм</a></li>
       </ul>
 
       <p>Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
