--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <header class="site-header">
 
     <div class="header-topbar">
-      <div class="tough-wrapper">
+      <div class="wrapper">
         <a class="site-logo"><img src="https://via.placeholder.com/108x18" alt="Логотип Техномарт" width="108" height="18"></a>
         <!-- Здесь будет форма поиска -->
           <ul class="shop-menu-list">
-            <li class="shop-menu-item favorites"><a href="404.html">Закладки: <span class="shop-menu-value">0</span></a></li>
-            <li class="shop-menu-item cart"><a href="404.html">Корзина: <span class="shop-menu-value">0</span></a></li>
+            <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html">Закладки: <span class="shop-menu-value">0</span></a></li>
+            <li class="shop-menu-item"><a class="shop-menu-link cart" href="404.html">Корзина: <span class="shop-menu-value">0</span></a></li>
           </ul>
           <a class="header-make-order" href="404.html">Оформить заказ</a>
       </div>
     </div>
 
     <div class="header-main-content">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
         <h1 class="header-site-descript">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
 
@@ -34,19 +34,19 @@
         <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 
         <ul class="user-menu">
-          <li class="user-menu-item login"><a href="404.html"><!-- svg inline here --><span class="login-label">Войти</span></a></li>
-          <li class="user-menu-item"><a href="404.html">Регистрация</a></li>
+          <li class="user-menu-item login"><a class="user-menu-link" href="404.html"><!-- svg inline here --><span class="login-label">Войти</span></a></li>
+          <li class="user-menu-item"><a class="user-menu-link" href="404.html">Регистрация</a></li>
         </ul>
 
         <nav class="site-navigation">
           <ul class="main-menu">
-            <li class="main-menu-item"><a>Главная</a></li>
-            <li class="main-menu-item"><a href="404.html">Компания</a></li>
-            <li class="main-menu-item"><a href="catalog.html">Каталог</a></li>
-            <li class="main-menu-item"><a href="404.html">Новости</a></li>
-            <li class="main-menu-item"><a href="404.html">Спецпредложения</a></li>
-            <li class="main-menu-item"><a href="404.html">Доставка</a></li>
-            <li class="main-menu-item"><a href="404.html">Контакты</a></li>
+            <li class="main-menu-item"><a class="main-menu-link">Главная</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="404.html">Компания</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="catalog.html">Каталог</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="404.html">Новости</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="404.html">Спецпредложения</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="404.html">Доставка</a></li>
+            <li class="main-menu-item"><a class="main-menu-link" href="404.html">Контакты</a></li>
           </ul>
         </nav>
 
@@ -58,35 +58,35 @@
   <main class="page-content-wrap">
 
     <section class="page-section">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
         <h2 class="visually-hidden">Навигация по разделам сайта</h2>
 
         <div class="promo-menu">
 
           <div class="promo-menu-item yellow">
-            <h3>Материалы</h3>
-            <a href="404.html">На любой вкус</a>
+            <h3 class="promo-menu-item-title">Материалы</h3>
+            <a class="promo-menu-item-link" href="404.html">На любой вкус</a>
           </div>
 
           <div class="promo-menu-item blue">
-            <h3>Инструмент</h3>
-            <a href="404.html">На все случаи</a>
+            <h3 class="promo-menu-item-title">Инструмент</h3>
+            <a class="promo-menu-item-link" href="404.html">На все случаи</a>
           </div>
 
           <div class="promo-menu-item lilac">
-            <h3>Техника</h3>
-            <a href="404.html">Для стройки</a>
+            <h3 class="promo-menu-item-title">Техника</h3>
+            <a class="promo-menu-item-link" href="404.html">Для стройки</a>
           </div>
 
           <div class="promo-menu-item green">
-            <h3>Скидки 50%</h3>
-            <a href="404.html">На 350 товаров</a>
+            <h3 class="promo-menu-item-title">Скидки 50%</h3>
+            <a class="promo-menu-item-link" href="404.html">На 350 товаров</a>
           </div>
 
           <div class="promo-menu-item yellow">
-            <h3>Доставка</h3>
-            <a href="404.html">Бесплатно</a>
+            <h3 class="promo-menu-item-title">Доставка</h3>
+            <a class="promo-menu-item-link" href="404.html">Бесплатно</a>
           </div>
 
           <div class="promo-slider">
@@ -96,8 +96,8 @@
               <div class="promo-slider-item active">
                 <img src="https://via.placeholder.com/620x266" alt="Перфораторы Bosch" width="620" height="266">
                 <div class="promo-slider-text-wrap">
-                  <h3>Перфораторы</h3>
-                  <p>Настоящие мужские игрушки</p>
+                  <h3 class="promo-slider-title">Перфораторы</h3>
+                  <p class="promo-slider-tagline">Настоящие мужские игрушки</p>
                 </div>
                 <a class="button" href="catalog.html">Открыть каталог</a>
               </div>
@@ -105,8 +105,8 @@
               <div class="promo-slider-item">
                 <img src="https://via.placeholder.com/620x266" alt="Дрели Bosch" width="620" height="266">
                 <div class="promo-slider-text-wrap">
-                  <h3>Дрели</h3>
-                  <p>Соседям на радость</p>
+                  <h3 class="promo-slider-title">Дрели</h3>
+                  <p class="promo-slider-tagline">Соседям на радость</p>
                 </div>
                 <a class="button" href="catalog.html">Открыть каталог</a>
               </div>
@@ -130,7 +130,7 @@
         <section class="index-catalog-section">
 
           <div class="catalog-section-header">
-            <h2>Популярные товары:</h2>
+            <h2 class="catalog-section-title">Популярные товары:</h2>
             <a class="button" href="404.html">Все популярные товары</a>
           </div>
 
@@ -140,8 +140,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a class="product-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 9000" width="220" height="145"></a>
-              <a class="product-card-title" href="404.html"><h3>Перфоратор BOSCH BFG 9000</h3></a>
+              <a href="404.html"><img class="product-card-thumb" src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 9000" width="220" height="145"></a>
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 9000</h3></a>
               <div class="product-card-price">
                 <span class="price-last">32500 Р.</span>
                 <span class="price-now">25500 Р.</span>
@@ -152,8 +152,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a class="product-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000" width="220" height="145"></a>
-              <a class="product-card-title" href="404.html"><h3>Перфоратор BOSCH BFG 3000</h3></a>
+              <a href="404.html"><img class="product-card-thumb" src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 3000" width="220" height="145"></a>
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
               <div class="product-card-price">
                 <span class="price-last">22500 Р.</span>
                 <span class="price-now">15500 Р.</span>
@@ -164,8 +164,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a class="product-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
-              <a class="product-card-title" href="404.html"><h3>Перфоратор BOSCH BFG 6000</h3></a>
+              <a href="404.html"><img class="product-card-thumb" src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 6000" width="220" height="145"></a>
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
               <div class="product-card-price">
                 <span class="price-last">30500 Р.</span>
                 <span class="price-now">25500 Р.</span>
@@ -176,8 +176,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a class="product-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 9000" width="220" height="145"></a>
-              <a class="product-card-title" href="404.html"><h3>Перфоратор BOSCH BFG 2000</h3></a>
+              <a href="404.html"><img class="product-card-thumb" src="https://via.placeholder.com/220x145" alt="Перфоратор BOSCH BFG 9000" width="220" height="145"></a>
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
               <div class="product-card-price">
                 <span class="price-now">12500 Р.</span>
               </div>
@@ -194,14 +194,14 @@
           </div>
 
           <ul class="index-catalog-list brands">
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель Bosch" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель Makita" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель DeWalt" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель Интерскол" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель Hitachi" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель LG" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель AEG" width="220" height="145"></a></li>
-            <li class="brand-card"><a class="brand-card-thumb" href="404.html"><img src="https://via.placeholder.com/220x145" alt="Производитель Metabo" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель Bosch" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель Makita" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель DeWalt" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель Интерскол" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель Hitachi" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель LG" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель AEG" width="220" height="145"></a></li>
+            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="https://via.placeholder.com/220x145" alt="Производитель Metabo" width="220" height="145"></a></li>
           </ul>
 
         </section>
@@ -209,9 +209,9 @@
     </section><!-- .page-section -->
 
     <section class="page-section grey-bg">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
-        <h2 class="page-section-header">Сервисы</h2>
+        <h2 class="page-section-title">Сервисы</h2>
 
         <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать
           ваши покупки приятными.</p>
@@ -226,18 +226,18 @@
 
           <div class="tabs-content">
             <div id="Delivery" class="tab-item">
-              <h3>Доставка</h3>
+              <h3 class="tab-item-title">Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
                 заработаем, поднимая его на ваш этаж!</p>
             </div>
             <div id="Warranty" class="tab-item">
-              <h3>Гарантия</h3>
+              <h3 class="tab-item-title">Гарантия</h3>
               <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его
                 возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом
                 уж восстановите как-нибудь сами.</p>
             </div>
             <div id="Сredit" class="tab-item">
-              <h3>Кредит</h3>
+              <h3 class="tab-item-title">Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
             </div>
           </div>
@@ -248,26 +248,26 @@
     </section><!-- .page-section -->
 
     <section class="page-section about">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
         <h2 class="visually-hidden">О компании</h2>
 
         <div>
-          <h3 class="page-section-header">Компания «Техномарт»</h3>
+          <h3 class="page-section-title">Компания «Техномарт»</h3>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
             равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
             компаниями:</p>
           <ul class="stylized-list">
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+            <li class="stylized-list-item">Деловые линии</li>
+            <li class="stylized-list-item">Автотрейдинг</li>
+            <li class="stylized-list-item">ЖелДорЭкспедиция</li>
           </ul>
           <a class="button about" href="404.html">Подробнее о компании</a>
         </div>
 
         <div>
-          <h3 class="page-section-header">Контакты</h3>
+          <h3 class="page-section-title">Контакты</h3>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <a href="404.html"><img src="https://via.placeholder.com/300x158" alt="" width="300" height="158"></a>
           <a class="button contact-us" href="404.html">Заблудились? Напишите нам!</a>
@@ -281,29 +281,29 @@
   <footer class="site-footer">
 
     <div class="footer-upper">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
         <div>
           <a class="footer-logo"><img src="https://via.placeholder.com/220x68" alt="Логотип «Техномарт» красный" width="220" height="68"></a>
-          <address class="footer-address">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+          <address>
+            <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           </address>
         </div>
 
         <div>
           <ul class="footer-site-nav">
-            <li><a href="404.html">Компания</a></li>
-            <li><a href="404.html">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="404.html">Доставка</a></li>
-            <li><a href="404.html">Контакты</a></li>
+            <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Компания</a></li>
+            <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Новости</a></li>
+            <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="catalog.html">Каталог</a></li>
+            <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Доставка</a></li>
+            <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Контакты</a></li>
           </ul>
 
           <ul class="footer-product-nav">
-            <li><a href="404.html">Материалы</a></li>
-            <li><a href="404.html">Техника</a></li>
-            <li><a href="404.html">Инструмент</a></li>
-            <li><a href="404.html">Спецпредложения</a></li>
+            <li class="footer-product-nav-item"><a class="footer-product-nav-link" href="404.html">Материалы</a></li>
+            <li class="footer-product-nav-item"><a class="footer-product-nav-link" href="404.html">Техника</a></li>
+            <li class="footer-product-nav-item"><a class="footer-product-nav-link" href="404.html">Инструмент</a></li>
+            <li class="footer-product-nav-item"><a class="footer-product-nav-link" href="404.html">Спецпредложения</a></li>
           </ul>
         </div>
 
@@ -311,9 +311,9 @@
     </div>
 
     <div class="footer-trim">
-      <div class="tough-wrapper">
+      <div class="wrapper">
 
-        <p>© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
+        <p class="copyright">© 2010–2019 Компания «Техномарт» <br>Все права защищены</p>
 
         <ul class="footer-socials">
           <li class="footer-socials-item"><a href="https://vk.com/denistugov" target="_blank"><!-- svg inline here --><span class="visually-hidden">Вконтакте</span></a></li>
@@ -321,8 +321,8 @@
           <li class="footer-socials-item"><a href="https://www.instagram.com/den0015" target="_blank"><!-- svg inline here --><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
 
-        <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-        <p>Разработано — <br><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
+        <p class="reply">Обратная связь: <br><a class="footer-trim-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+        <p class="designed">Разработано — <br><a class="footer-trim-link" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a></p>
         
       </div>
     </div>
